--- a/style.css
+++ b/style.css
@@ -1,4 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root {
+  --color-primary: #fff;
+  --color-darker: #001028;
+  --color-yellow: #f4b400;
+  --color-green: #4caf50;
+  --color-red: #f44336;
+  --color-secondary: #57a2f8;
+  --color-ash: #747474;
+  --font-family-primary: 'Poppins', sans-serif;
+  --font-family-secondary: 'Rubik Mono One', sans-serif;
+  --td: 150ms;
+  --te: cubic-bezier(0.215, 0.61, 0.355, 1);
+
+    /* Dark Mode Colors */
+    --color-primary-dark: #081526;
+    --color-ash-dark: #0f9f85;
+    --color-darker-dark: #c9d7f2;
+    --color-secondary-dark: #152840;
+    --color-tertiary-dark: #7b8da6;
+}
+
+
 body {
   margin: 0;
   padding: 1rem;
@@ -103,3 +126,70 @@ div.info a {
     font-size: 32px;
   }
 }/*# sourceMappingURL=style.css.map */
+
+
+
+
+/* Style for the toggle switch */
+.dark-mode-toggle {
+  position: fixed;
+  top: 4rem; /* Updated to 5rem from the top */
+  right: 1rem; /* Updated to 1rem from the right */
+  z-index: 999;
+  width: 36px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  background-color: var(--color-secondary);
+  border-radius: 18px;
+}
+
+label.switch-toggle {
+  margin: 0;
+  padding: 0;
+  background-color: var(--color-secondary);
+}
+.toggle-slider {
+  position: relative;
+  width: 40px;
+  height: 20px;
+  background-color: var(--color-ash);
+  border-radius: 20px;
+}
+
+.toggle-slider:before {
+  content: "";
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  background-color: var(--color-darker);
+  left: 3px;
+  bottom: -7.5px;
+  transition: 0.4s;
+}
+
+input:checked + .toggle-slider {
+  background-color: var(--color-green);
+}
+
+input:checked + .toggle-slider:before {
+  transform: translateX(16px);
+}
+
+/* Hide the default checkbox */
+input[type="checkbox"] {
+  display: none;
+}
+
+
+
+/* Dark Mode Styles */
+body.dark-mode {
+  background-color: var(--color-secondary-dark);
+  color: var(--color-darker-dark);
+}
+
+.dark-mode h1 {
+  color: var(--color-darker-dark);
+}
