--- a/style.css
+++ b/style.css
@@ -65,11 +65,11 @@ p {
 #checkBtn2:checked ~ #listing2 {
   display: block;
 }
-.history a, .before-history a, .basic-section a {
-  background-color: var(--color-darker);
-  color: var(--color-primary);
-  text-decoration: underline;
-  text-decoration-style: dotted;  
+.basic-section a {
+  /* background-color: var(--color-darker); */
+  /* color: var(--color-primary); */
+  /* text-decoration: underline; */
+  /* text-decoration-style: dotted;   */
   padding: 2px 4px;
 }
 
@@ -118,7 +118,7 @@ blockquote {
 }
 
 .course-description-text p{
-  font-size: 0.8rem;
+  font-size: 0.65rem;
   line-height: 1.5;
 }
 
@@ -512,7 +512,7 @@ blockquote {
 
 .contribute-cta p, .contribute-cta span{
   margin: 0;
-  font-size: 11px;
+  font-size: 0.5rem;
 }
 
 .contribute-cta span a {
@@ -563,7 +563,7 @@ blockquote {
   /* margin: 0 10%; */
 }
 .home-pg p {
-  font-size: 2rem;
+  font-size: .7rem;
 }
 
 
@@ -590,7 +590,7 @@ blockquote {
 }
 
 .home-pg ul li  {
-  font-size: 13px;
+  font-size: 0.7rem;
   margin: 5px;
 }
 
@@ -612,7 +612,7 @@ blockquote {
  }
 
 .contribute { 
-  font-size: .8rem;
+  font-size: .65rem;
 }
 
 .contribute-container { 
@@ -823,7 +823,7 @@ blockquote {
   margin-top: 0;
   padding: 16px 0 16px 50px;
   border-top: 1px solid #ccc;
-  font-size: 0.8rem;
+  font-size: 0.65rem;
 }
 
 .topics ul li a{
@@ -845,7 +845,7 @@ blockquote {
   -o-transform: translate(0,-50%);
   transform: translate(0,-50%);
   left: 30px;
-  font-size: 1.1rem;
+  font-size: 1rem;
   font-weight: 600;
 }
 .topics ul li span {
@@ -919,7 +919,7 @@ padding: 0;
 }
 
 footer p, footer span{
-  font-size: 0.65rem;
+  font-size: 0.55rem;
 }
 
 
@@ -935,6 +935,7 @@ footer p, footer span{
   border-radius:20px;
   font-weight: 500;
   font-family: var(--font-family-primary);
+  font-size: 0.7rem;
   transition:all 200ms ease-out;
 }
 
@@ -948,6 +949,24 @@ footer p, footer span{
   background: var(--color-secondary);
 }
 
+.red-btn {
+  background: var(--color-red);
+  margin: 15px 0;
+  color:#fff;
+  border:none;
+  padding:10px 30px;
+  border-radius:20px;
+  font-weight: 500;
+  font-family: var(--font-family-primary);
+  font-size: 0.7rem;
+  transition:all 200ms ease-out;
+}
+
+.red-btn:hover{
+  box-shadow:0 0 0 2px var(--color-ash-dark) inset;
+  transition:none;
+}
+
 .button-homepg {
   background-color: var(--color-darker);
   border: none;
@@ -957,7 +976,7 @@ footer p, footer span{
   text-align: left;
   text-decoration: none;
   display: inline-block;
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-family: var(--font-family-primary);
   margin: 4px 2px;
   cursor: pointer;
@@ -978,14 +997,14 @@ footer p, footer span{
 .download-button {
   height: 2em;
   display: inline-block;
-  border: 3px solid var(--color-darker);
-  font-size: 1em;
-  font-weight: 500;
+  font-size: 0.8em;
+  font-weight: normal;
+  border-radius: 14px;
   text-align: center;
   text-decoration: none;
-  color: var(--color-darker);
   overflow: hidden;
-  float: right;
+  background-color: var(--color-red);
+  
 }
 
 .download-button .icon {
@@ -996,16 +1015,23 @@ footer p, footer span{
 .download-button .download-primary,
 .download-button .download-secondary {
   display: block;
-  padding: 0 2em;
+  padding: 0 1em;
   line-height: 2em;
   -webkit-transition: margin .4s;
   transition: margin .4s;
+  border-radius: 20px;
+
 }
 
 .download-button .download-primary {
-  background-color: var(--color-darker);
+  background-color: var(--color-red);
   color: var(--color-primary);
 }
+
+.download-button .download-secondary {
+  color: var(--color-primary);
+}
+
 
 .download-button:hover .download-primary {
   margin-top: -2em;
@@ -1376,6 +1402,7 @@ iframe {
 .pdf-embed iframe{
   width: 100%;
   margin: auto;
+  border: none;
 }
 
 figcaption {
@@ -1397,11 +1424,58 @@ figcaption {
   border: 1px solid var(--color-ash);
   border-radius: 10px;
   box-sizing: border-box;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   font-family: var(--font-family-primary);
 }
 
+#content {
+  display: none;
+  position: absolute;
+  width: 60%;
+  top: 47%; /*to position below the search box */
+  left: 20%;
+  right: 20%;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  max-height: 200px; /* to set a max height for the results container */
+  overflow-y: auto; /* Enable vertical scrollbar if needed */
+  scrollbar-width: thin; /* Set the width of the scrollbar (works in Firefox) */
+  scrollbar-color: transparent transparent; /* Set the color of the scrollbar (works in Firefox) */  padding: 10px;
+  z-index: 999;
+  text-align: left;
+}
 
+#content::-webkit-scrollbar {
+  width: 5px; /* Set the width of the scrollbar (works in WebKit browsers like Chrome and Safari) */
+}
+
+#content::-webkit-scrollbar-thumb {
+  background-color: transparent; /* Set the color of the scrollbar thumb (works in WebKit browsers) */
+}
+
+#content p {
+  font-style: italic;
+  color: var(--color-ash-dark);
+  font-size: 0.7rem;
+  line-height: 1.3;
+}
+
+#content li {
+  display: block;
+  margin-bottom: 10px;
+}
+
+#content a {
+  color: var(--color-primary-dark);
+  text-decoration: none;
+  font-weight: normal;
+  font-size: 0.7rem;
+}
+
+#content a:hover {
+  text-decoration: underline;
+}
 
 
 
@@ -1648,6 +1722,26 @@ body.dark-mode {
   color: var(--color-darker-dark);
   margin-bottom: 20px;
 }
+
+.dark-mode #content {
+  background-color: var(--color-secondary-dark);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  border: none;
+}
+
+.dark-mode #content p {
+  color: var(--color-secondary);
+}
+
+
+
+.dark-mode #content a {
+  color: var(--color-darker-dark);
+  text-decoration: none;
+  font-weight: normal;
+  font-size: 0.7rem;
+}
+
 
 .dark-mode .topics ul li a{
   color: var(--color-darker-dark);
