--- a/style2.css
+++ b/style2.css
@@ -257,7 +257,7 @@ body.dark-mode {
 
 
 .dark-mode .flat-btn{
-  background: var(--color-red);
+  background: var(--color-ash);
 }
 
 .dark-mode .flat-btn {
