--- a/style2.css
+++ b/style2.css
@@ -88,27 +88,6 @@ h1 .red {
   color: #f44336;
 }
 
-div.info {
-  font-size: 12px;
-  margin-top: 6rem;
-  color: #747474;
-  text-align: center;
-}
-
-div.info p{
-  text-align: center;
-  background-color: var(--color-ash-dark);
-  padding: 10px;
-  border-radius: 7px;
-  width: 15rem;
-  margin: 10px auto;
-}
-
-div.info a {
-  text-decoration: none;
-  color: var(--color-primary);
-  text-align: center;
-}
 
 @keyframes blink {
   from {
@@ -232,6 +211,43 @@ width: 80%;
 }
 
 
+.blurred-box {
+  background: #57a2f844;
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(1.4px);
+  -webkit-backdrop-filter: blur(1.4px);
+  border: 1px solid rgba(255, 255, 255, 0.044);
+  margin-top: 4rem;
+}
+
+div.posting {
+  font-size: 12px;
+  text-align: center;
+}
+
+div.posting a{
+  display: block;
+  text-align: center;
+  background-color: var(--color-primary);
+  padding: 10px;
+  border-radius: 10px;
+  margin: 1rem auto;
+  text-decoration: none;
+  color: var(--color-ash);
+  width: 80%;
+}
+
+div.posting a:hover{
+  background: var(--color-primary-dark);
+  color: var(--color-primary);
+}
+
+
+div.posting a:active{
+  background: var(--color-ash-dark);
+}
+
 /* Dark Mode Styles */
 body.dark-mode {
   background-color: var(--color-secondary-dark);
@@ -242,18 +258,7 @@ body.dark-mode {
   color: var(--color-darker-dark);
 }
 
-.dark-mode .info a {
-  text-decoration: none;
-  color: var(--color-darker-dark);
-  text-align: center;
-}
 
-.dark-mode .info p{
-  text-align: center;
-  background-color: var(--color-darker);
-  padding: 7px;
-  border-radius: 7px;
-}
 
 
 .dark-mode .flat-btn{
@@ -265,7 +270,8 @@ body.dark-mode {
 }
 
 .dark-mode .flat-btn:hover{
-  background: var(--color-green);
+  background: var(--color-primary-dark);
+  color: var(--color-primary);
 }
 
 
@@ -274,3 +280,24 @@ body.dark-mode {
   background: var(--color-ash-dark);
 }
 
+
+.dark-mode .blurred-box {
+  background: #74747458;
+}
+
+
+
+.dark-mode .posting a{
+  background-color: var(--color-ash);
+  color: var(--color-primary-dark);
+}
+
+.dark-mode .posting a:hover{
+  background: var(--color-primary-dark);
+  color: var(--color-primary);
+}
+
+
+.dark-mode .posting a:active{
+  background: var(--color-primary-dark);
+}
