--- a/style2.css
+++ b/style2.css
@@ -120,6 +120,74 @@ h1 .red {
 
 
 
+
+
+
+.homepage {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.homepage .course-card {
+  width: calc(50% - 50px);
+  height: 8em;
+  border: 1px solid #ccc;
+  border-radius: 7px;
+  overflow: hidden;
+  cursor: pointer;
+  text-decoration: none;
+  color: inherit;
+  position: relative;
+  display: block;
+}
+
+.homepage .course-icon {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 30px;
+  height: 30px;
+  background: no-repeat center center;
+  background-size: contain;
+}
+
+.homepage .course-image {
+  width: 100%;
+  height: 75%;
+  background: no-repeat center center;
+  background-size: cover;
+}
+
+.homepage .course-heading {
+  width: 100%;
+  height: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: #f4f4f4;
+}
+
+.homepage .course-card:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+/* Tablet and desktop styles */
+@media (min-width: 768px) {
+  .homepage .course-card {
+      width: calc(33.333% - 20px);
+  }
+}
+
+@media (min-width: 1024px) {
+  .homepage .course-card {
+      width: calc(25% - 20px);
+  }
+}
+
 /* Style for the toggle switch */
 .dark-mode-toggle {
   position: fixed;
@@ -179,7 +247,8 @@ input[type="checkbox"] {
 /*                        buttons          */
 
 .btn {
-  margin-right: auto;
+  width: 40%;
+  margin: 4rem auto 1rem auto;
 }
 
 .flat-btn {
@@ -187,11 +256,12 @@ input[type="checkbox"] {
   color:#fff;
   border:none;
   padding:10px 10px;
-  border-radius:20px;
   font-family: var(--font-family-primary);
   transition:all 200ms ease-out;
   display: inline-block;
   width: 9rem;
+  margin: auto;
+
 }
 
 .flat-btn a{
@@ -546,4 +616,14 @@ body.dark-mode {
 
 .dark-mode .section ul li {
   border: 5px solid var(--color-secondary);
+}
+
+.dark-mode .homepage .course-card {
+  border: 1px solid var(--color-ash);
+
+}
+
+.homepage .course-heading {
+  color: var(--color-darker-dark);
+  background-color: var(--color-darker);
 }
