--- a/style2.css
+++ b/style2.css
@@ -166,7 +166,7 @@ h1 .red {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
+  font-size: 14px;
   font-weight: bold;
   background-color: #f4f4f4;
 }
@@ -266,6 +266,7 @@ input[type="checkbox"] {
 
 .flat-btn a{
   color:#fff;
+  font-size: .7rem;
   text-decoration: none;
 }
 
